--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "master": "master/bin/run",
-    "note": "note/bin/run"
+    "note": "note/bin/run",
+    "benchmark": "npx ts-node others/benchmark.ts"
   },
   "keywords": [],
   "author": "",
